🚚move blog posts to v1

--- a/v1/blog/2018-08-22_prey.md
+++ b/v1/blog/2018-08-22_prey.md
@@ -1,12 +1,11 @@
 ---
-type: blog
-archive: false
-showcase: false
-slug: prey-review
+layout: blogTemplate.liquid
+permalink: /blog/prey-review/
 title: Prey
 description: I just wanna keep talking, and unless someone stops me I just might. Spoiler alert, this games is pretty freakin' rad.
-image: /assets/blog__prey-review.jpg
 tags:
+  - blog
+displayTags: 
   - gaming
 date: 2018-08-22T23:34:51.700Z
 ---
